# stan

./: .gitignore  .stan-windows.toml  .stan.toml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  README.md  RULES.md  cabal.project  ghc-9.10.1.cabal.project  ghc-9.10.1.dhall2stack.yaml  ghc-9.4.8.dhall2cabal.project  ghc-9.4.8.stack.yaml  ghc-9.6.5.dhall2cabal.project  ghc-9.6.5.stack.yaml  ghc-9.8.2.cabal.project  ghc-9.8.2.dhall2stack.yaml  hie.yaml  report  stack-ghc-9.10.2.yaml  stack-ghc-9.4.8.yaml  stack-ghc-9.6.3.yaml  stack-ghc-9.6.4.yaml  stack-ghc-9.6.5.yaml  stack-ghc-9.6.6.yaml  stack-ghc-9.6.7.yaml  stack-ghc-9.8.4.yaml  stack.yaml  stan.cabal  stan.html
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  release.yml
app/: Main.hs
project-stackage/: lts-22.23.config  nightly-2024-05-31.config
src/: Stan.hs
src/Stan/: Analysis.hs  Browse.hs  Cabal.hs  Category.hs  Cli.hs  Config.hs  EnvVars.hs  Example.hs  FileInfo.hs  Hie.hs  Info.hs  Inspection.hs  NameMeta.hs  Observation.hs  Partial.hs  Pattern.hs  Report.hs  SARIF.hs  Severity.hs  Toml.hs  Warning.hs
src/Stan/Analysis/: Analyser.hs  Infinite.hs  Partial.hs  Pretty.hs  Summary.hs  Visitor.hs
src/Stan/Config/: Pretty.hs
src/Stan/Core/: Id.hs  List.hs  ModuleName.hs  Toggle.hs
src/Stan/Ghc/: Compat.hs  Compat810.hs  Compat900.hs  Compat902.hs  Compat906.hs
src/Stan/Hie/: Compat.hs  Compat810.hs  Compat900.hs  Compat902.hs  Compat904.hs  Debug.hs  Debug810.hs  Debug900.hs  Debug902.hs  Debug908.hs  Match.hs  MatchAst.hs  MatchType.hs
src/Stan/Inspection/: All.hs  AntiPattern.hs  Infinite.hs  Partial.hs  Performance.hs  Style.hs
src/Stan/Pattern/: Ast.hs  Edsl.hs  Type.hs
src/Stan/Report/: Css.hs  Html.hs  Settings.hs
test/: .stan-example.toml  Spec.hs
test/Test/: Analysis.hs  Example.hs  Number.hs
test/Test/Analysis/: Partial.hs
test/Test/Stan/: Analysis.hs  Cli.hs  Config.hs  Gen.hs  Inspection.hs  Number.hs  Observation.hs  Toml.hs
test/Test/Stan/Analysis/: AntiPattern.hs  Common.hs  Infinite.hs  Partial.hs  Performance.hs  PlutusTx.hs  Style.hs
