cabal-version:       2.4
name:                stan
version:             0.0.0.0
synopsis:            Haskell static analyser
description:         Haskell static analyser
                     See [README.md](https://github.com/kowainik/stan#stan) for more details.
homepage:            https://github.com/kowainik/stan
bug-reports:         https://github.com/kowainik/stan/issues
license:             MPL-2.0
license-file:        LICENSE
author:              Veronika Romashkina, Dmitrii Kovanikov
maintainer:          Kowainik <xrom.xkov@gmail.com>
copyright:           2020 Kowainik
category:            Static Analysis
build-type:          Simple
stability:           experimental
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.8.3

source-repository head
  type:                git
  location:            https://github.com/kowainik/stan.git

common common-options
  build-depends:       base ^>= 4.13

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies
                       -Werror=missing-deriving-strategies
                       -fwrite-ide-info
                       -hiedir=.hie

  default-language:    Haskell2010
  default-extensions:  ConstraintKinds
                       DeriveGeneric
                       DerivingStrategies
                       GeneralizedNewtypeDeriving
                       InstanceSigs
                       KindSignatures
                       LambdaCase
                       OverloadedStrings
                       RecordWildCards
                       ScopedTypeVariables
                       StandaloneDeriving
                       TupleSections
                       TypeApplications
                       ViewPatterns

common common-relude
  build-depends:       relude ^>= 0.6.0.0
  mixins:              base hiding (Prelude)
                     , relude (Relude as Prelude
                              , Relude.Extra.Lens
                              )

library
  import:              common-options
                     , common-relude
  hs-source-dirs:      src
  exposed-modules:     Stan
                         Stan.Analysis
                         Stan.Cli
                         Stan.Core.Id
                         Stan.Hie
                           Stan.Hie.Debug
                         Stan.Inspection
                         Stan.Observation

  autogen-modules:     Paths_stan
  other-modules:       Paths_stan

  build-depends:       colourista ^>= 0.0.0.0
                     , dir-traverse ^>= 0.2.2.2
                     , directory ^>= 1.3
                     , filepath ^>= 1.4
                     , ghc ^>= 8.8
                     , ghc-paths ^>= 0.1.0.12
                     , gitrev ^>= 1.3.1
                     , optparse-applicative ^>= 0.15

--                       Uncomment for debugging
--                     , pretty-simple ^>= 3.2

executable stan
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       stan

test-suite stan-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       stan
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
